--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./fonts.scss";
+@import "./animations.scss";
 @import "./element_theme.css";
 // $--font-path: "~element-ui/lib/theme-chalk/fonts";
 // @import "~element-ui/packages/theme-chalk/src/index";
@@ -23,21 +24,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  font-weight: 600 !important;
+}
+
+h1 {
+  font-size: 2.8rem;
+  line-height: 3;
+}
+
+h2 {
+  font-size: 2.2rem;
+  line-height: 1.1;
+}
+
+h4 {
+  line-height: 2;
+  font-weight: 400;
+}
+
 .el-dropdown-link {
   cursor: pointer;
 }
 
-/* Enter and leave animations can use different */
-/* durations and timing functions.              */
-.slide-fade-enter-active {
-  transition: all 0.3s ease;
-}
-.slide-fade-leave-active {
-  transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
-}
-.slide-fade-enter,
-.slide-fade-leave-to
-/* .slide-fade-leave-active below version 2.1.8 */ {
-  transform: translateY(-10px);
-  opacity: 0;
-}
