--- a/src/assets/styles/animations.scss
+++ b/src/assets/styles/animations.scss
@@ -3,26 +3,42 @@
 // fade
 
 .fade-enter-active, .fade-leave-active {
-  transition: opacity 1.5s;
+  transition: opacity 0.5s;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
   opacity: 0;
 }
 
-// slide-fade
+// slide-down-fade
 
-.slide-fade-enter-active {
+.slide-down-fade-enter-active {
   transition: all 0.3s ease;
 }
-.slide-fade-leave-active {
-  transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
+.slide-down-fade-leave-active {
+  transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
 }
-.slide-fade-enter,
-.slide-fade-leave-to
-/* .slide-fade-leave-active below version 2.1.8 */ {
+.slide-down-fade-enter,
+.slide-down-fade-leave-to
+/* .slide-down-fade-leave-active below version 2.1.8 */ {
   transform: translateY(-10px);
   opacity: 0;
 }
+
+// slide-up-fade
+
+.slide-up-fade-enter-active {
+  transition: all 0.3s ease;
+}
+.slide-up-fade-leave-active {
+  transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
+}
+.slide-up-fade-enter,
+.slide-up-fade-leave-to
+/* .slide-down-fade-leave-active below version 2.1.8 */ {
+  transform: translateY(10px);
+  opacity: 0;
+}
+
 
 // shake
 .shake-enter-active {
